# WorldAutomation

./: CMakeLists.txt  Outline.txt  main.cpp  objects.json
Game/: BuildMap.cpp  BuildMap.h  Electronic.cpp  Game.vcxproj  Game.vcxproj.filters  ImageObject.h  Item.cpp  Item.h  Wire.cpp  main.cpp
Game/Graphics/: ImageObject.cpp
Game/Map/Resources/: Harvestable.h
Game/Player/: Player.h
Game/Tech/: Electronic.h
src/: BuildMap.cpp  BuildMap.h  Electronic.cpp  Electronic.h  ElectronicPresets.cpp  ElectronicPresets.h  Harvestable.cpp  Harvestable.h  ImageObject.cpp  ImageObject.h  Player.cpp  Player.h  Wire.cpp  Wire.h
